force-app/main/default/objects/Subpoenaed__c/Subpoenaed__c.object-meta.xml
<CustomObject>
    <label>Subpoenaed</label>
    <nameField>
        <displayFormat>Sub-{00000}</displayFormat>
        <label>subpoenaed Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subpoenaed</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>