force-app/main/default/objects/Subpoenaed__c/fields/Court__c.field-meta.xml
<CustomField>
    <fullName>Court__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Court</label>
    <referenceTo>Court__c</referenceTo>
    <relationshipLabel>Subpoenaed</relationshipLabel>
    <relationshipName>Subpoenaed</relationshipName>
    <type>Lookup</type>
</CustomField>