force-app/main/default/objects/Subpoenaed__c/fields/For_each_subpoena__c.field-meta.xml
<CustomField>
    <fullName>For_each_subpoena__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For each subpoena, is a releases or consent necessary ? is it in the file ?</inlineHelpText>
    <label>For each subpoena</label>
    <type>Checkbox</type>
</CustomField>