force-app/main/default/objects/Subpoenaed__c/fields/Subpoenaed_Address__c.field-meta.xml
<CustomField>
    <fullName>Subpoenaed_Address__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>