force-app/main/default/objects/Subpoenaed__c/fields/Supoenaed_Name__c.field-meta.xml
<CustomField>
    <fullName>Supoenaed_Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>