force-app/main/default/objects/Subpoenaed__c/fields/Type_of_Records__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Records__c</fullName>
    <label>Type of Records</label>
    <length>255</length>
    <type>Text</type>
</CustomField>